--- a/views/index.html
+++ b/views/index.html
@@ -32,7 +32,8 @@
             <!--fin de la cabezera con botones-->
             <!--Inicio de la tabla-->
             <div class="card-body text-center" >
-                <table class="table table-md table-striped">
+                <table class="table table-md table-striped"
+                id="tabla-productos">
                     <colgroup >
                         <col width = "5%">
                         <col width = "14%">
@@ -56,10 +57,11 @@
                             <th>restricciones</th>
                             <th>stock</th>
                             <th>precio</th>
+                            <th>metodos</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <!-- <tr>
                             <th>1</th>
                             <th>paracetamol</th>
                             <th>medicamento</th>
@@ -70,7 +72,7 @@
                             <th>45</th>
                             <th>34.90</th>
                         
-                          </tr>
+                          </tr> -->
                     </tbody>
                 </table> 
             </div>
@@ -92,10 +94,10 @@
         </div>
 
         <div class="modal-body" >
-          <form action="" id="formulario-curso">
+          <form action="" id="formulario-producto">
             <div class="mb-3">
-              <label for="nombrecurso" class="form-label">Nombre Producto</label>
-              <input type="text" class="form-control form-control-sm" id="nombrecurso">
+              <label for="nombreproducto" class="form-label">Nombre Producto</label>
+              <input type="text" class="form-control form-control-sm" id="nombreproducto">
             </div>
             <div class="mb-3">
               <label for="Categoria" class="form-label">categoria</label>
@@ -108,18 +110,18 @@
             </div>
 
             <div class="mb-3">
-                <label for="Proveedor" class="form-label">Proveedor</label>
+                <label for="proveedor" class="form-label">Proveedor</label>
                 <input type="text" class="form-control form-control-sm" id="Proveedor">
             </div>
 
             <div class="mb-3">
-                <label for="Descripcion" class="form-label">Descripcion</label>
+                <label for="descripcion" class="form-label">Descripcion</label>
                 <input type="text" class="form-control form-control-sm" id="Descripcion">
             </div>
 
             <div class="mb-3">
-                <label for="Formato" class="form-label">Formato</label>
-                <select id="Formato" class="form-select form-select-sm">
+                <label for="formato" class="form-label">Formato</label>
+                <select id="formato" class="form-select form-select-sm">
                   <option value="">Seleccione</option>
                   <option value="pastilla">pastilla</option>
                   <option value="jarabe">jarabe</option>
@@ -129,7 +131,7 @@
 
               <div class="mb-3">
                 <label for="restriccion" class="form-label">Restriccion</label>
-                <select id="Restriccion" class="form-select form-select-sm">
+                <select id="restriccion" class="form-select form-select-sm">
                   <option value="">Seleccione</option>
                   <option value="Con Receta">con receta</option>
                   <option value="sin receta">sin receta</option>
@@ -137,8 +139,8 @@
               </div>
 
             <div class="mb-3">
-              <label for="estock" class="form-label">stock:</label>
-              <input type="text" class="form-control form-control-sm" id="precio">
+              <label for="stock" class="form-label">stock:</label>
+              <input type="text" class="form-control form-control-sm" id="stock">
             </div>
             <div class="mb-3">
                 <label for="precio" class="form-label">Precio:</label>
@@ -149,7 +151,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-primary btn-sm" id="guardar-curso">Guardar</button>
+          <button type="button" class="btn btn-primary btn-sm" id="guardar-producto">Guardar</button>
         </div>
       </div>
     </div>
@@ -164,6 +166,64 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
   </script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script>
+  $(document).ready(function(){
+
+    function mostrarProductos(){
+        $.ajax({
+          url: '../controllers/controller.productos.php',
+          type: 'POST',
+          data: { operacion: 'listar'},
+          dataType: 'text',
+          success: function(result){
+            $("#tabla-productos tbody").html(result);
+          }
+        });
+      }
+      mostrarProductos()
+
+
+      function registrarProducto(){
+        //pendiente validadar
+        if (confirm("¿Está seguro de registrar este nuevo Producto?")){
+          $.ajax({
+            url: '../controllers/controller.productos.php',
+            type: 'POST',
+            data: {
+            operacion       :'registrar',
+            nombreproducto  : $("#nombreproducto").val(),
+            categoria       : $("#categoria").val(),
+            proveedor       : $("#proveedor").val(),
+            descripcion     : $("#descripcion").val(),
+            formato         : $("#formato").val(),
+            restricciones   : $("#restricciones").val(),
+            stock           : $("#stock").val(),
+            precio          : $("#precio").val()
+            
+            },
+            success: function(result){
+              if (result == ""){
+                // reiniciar el formulario
+                $("#formulario-producto")[0].reset();
+
+                //actualizar la tabla
+                mostrarProductos();
+                //cerrar el modal
+
+                $("#modal-registro-producto").modal('hide');
+              }
+            }
+          });
+        }
+      }  
+
+
+      $("#guardar-producto").click(registrarProducto);
+  });
+</script>
+
 </body>
 
 </html>
