agregando algunos comentarios

--- a/views/index.html
+++ b/views/index.html
@@ -173,6 +173,8 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script>
+
+  //En esta parte van funciones para poder mostrar los datos de la base de datos
   $(document).ready(function(){
 
     function mostrarProductos(){
